# Faultline

./: AGENTS.md  README.md  SETUP_GUIDE.md
faultline_agent/: .env  .env.example  .gitignore  Dockerfile  app.py  cli.py  config.py  mcp_server.py  pyproject.toml  requirements.txt  security.py  test_core.py
faultline_agent/.streamlit/: config.toml
faultline_agent/agents/: __init__.py  base_agent.py  dependency_agent.py  ingestion_agent.py  insight_agent.py  orchestrator.py  propagation_agent.py  scenario_agent.py  stress_agent.py
faultline_agent/app/: .env  __init__.py  agent.py  runner.py  schemas.py  tools.py  workflow.py
faultline_agent/core/: __init__.py  failure_engine.py  graph_builder.py  models.py  simulator.py  state_machine.py
faultline_agent/data/: live_data_fetcher.py  real_world_data.py  sample_inputs.json
faultline_agent/scenarios/: __init__.py  banking.py  cicd.py  custom_builder.py  ecommerce.py
faultline_agent/tools/: __init__.py  graph_tool.py  propagation_tool.py  stress_tool.py
faultline_agent/ui/: __init__.py  incident_replay.py  styles.py  visualizations.py
